# sd-coreml-ui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt  install.py
sdcui/: CMakeLists.txt  main.cpp
